syntax = "proto3";

package wavelet;
option go_package = "pb/waveletpb";

message QueryRequest {
    bytes round = 1;
}

message QueryResponse {
    bytes preferred = 1;
}

message OutOfSyncResponse {
    bytes round = 1;
}

message SyncInitRequest {
    uint64 view_id = 1;
}

message SyncInitResponse {
    uint64 latest_view_id = 1;
    repeated bytes chunkHashes = 2;
}

message SyncChunkRequest {
    bytes chunk_hash = 1;
}

message SyncChunkResponse {
    bytes diff = 1;
}

message DownloadTxRequest {
    repeated bytes ids = 1;
}

message Transactions {
    repeated bytes transactions = 1;
}